--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             background-color: #C9CACA;
             position: absolute;
             bottom: 0;
+            margin: 0;
         }
 
         .text {
@@ -111,18 +112,20 @@
             font-family: helvetica, "微軟正黑體";
             font-weight: bold;
             font-size: 16pt;
+         
+            
             /* opacity: 0.8; */
         }
 
         .about_photo {
             position: absolute;
             bottom: 20px;
-            left: 571px;
+            left: 459px;
         }
 
         .ap {
-            height: 250px;
-            width: 350px;
+            height: 25vh;
+            width: 30%;
             background-color: rgb(161, 159, 159);
             display: inline-block;
             overflow: hidden;
@@ -598,7 +601,7 @@
             <div class="content">
                 <div class="avatar"></div>
                 <div class="text" style="border: 1px black solid;">
-                    <p>嗨！我是素顏，本名是陳仕凱，目前是應屆畢業生，
+                    <a>嗨！我是素顏，本名是陳仕凱，目前是應屆畢業生，
                         在即將畢業前為自己做個紀錄，紀錄這幾年來的作品與生活點滴，
                         目前在學習概念美術、專案企劃、網站前端、影片剪輯，
                         並有一個Youtube頻道在運作，
@@ -606,12 +609,12 @@
                         內容大部分都會是我個人看完該作品之後
                         所做出的見解跟介紹
                         也會放一些twitch直播跟唱歌的影片
-                    </p>
+                    </a>
                 </div>
                 <div class="about_photo">
                     <div class="ap"><img src="/images/photo_01.jpg"></div>
                     <div class="ap"><img src="/images/photo_02.jpg"></div>
-                    <div class="ap"><img src="/images/photo_03.jpg" height="300px"></div>
+                    <div class="ap"><img src="/images/photo_03.jpg"></div>
                 </div>
             </div>
         </div>
@@ -717,15 +720,15 @@
         </div>
     </section>
     <section id="footer" class="section5">
-    <div class="footer">
-        <div class="soical">
-            <div class="link"><a href=""><img src="/images/icon_fb.png"></a></div>
-            <div class="link"><a href=""><img src="/images/icon_ig.png"></a></div>
-            <div class="link"><a href=""><img src="/images/icon_youtube.png"></a></div>
-            <div class="link"><a href=""><img src="/images/icon_pixiv.png"></a></div>
-            <div class="link"><a href=""><img src="/images/icon_twitch.png"></a></div>
+        <div class="footer">
+            <div class="soical">
+                <div class="link"><a href=""><img src="/images/icon_fb.png"></a></div>
+                <div class="link"><a href=""><img src="/images/icon_ig.png"></a></div>
+                <div class="link"><a href=""><img src="/images/icon_youtube.png"></a></div>
+                <div class="link"><a href=""><img src="/images/icon_pixiv.png"></a></div>
+                <div class="link"><a href=""><img src="/images/icon_twitch.png"></a></div>
+            </div>
         </div>
-    </div>
     </section>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
